c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/prefix_incr_string.c
// Can't apply prefix ++/-- to string literal
int main(void) {
    ++"foo";
    return 0;
}